--- a/doufenqx.config
+++ b/doufenqx.config
@@ -10,4 +10,4 @@ hostname = *.doufen.me
 
 
 #豆粉签到获取cookie
-https://www.doufen.me/user/panel url script-request-header doufen.js
+^https:\/\/www..doufen.me\/user url script-request-header nzw9314/doufen.js
